syntax = "proto3";
package pb;
option go_package = "internal/pb";

message blank {}

message Category {
  string id = 1;
  string name = 2;
  string description = 3;
}

message CategoryRequest {
  string name = 2;
  string description = 3;
}

message CategoryList {
  repeated Category categories = 1;
}

message GetCategoryRequest {
  string id = 1;
}

service CategoryService {
  rpc CreateCategory(CategoryRequest) returns (Category) {}
  rpc CreateCategoryStream(stream CategoryRequest) returns (CategoryList) {}
  rpc ListCategories(blank) returns (CategoryList) {}
  rpc GetCategory(GetCategoryRequest) returns (Category) {}
}
